{
    "name": "PauseMenuInputActions",
    "maps": [
        {
            "name": "PauseMenu",
            "id": "2145a998-dbd4-49f2-90b5-9b10d592b13b",
            "actions": [
                {
                    "name": "TogglePauseMenu",
                    "type": "Button",
                    "id": "cbc2f58b-8dde-4bf6-9760-54f2e9a2513a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClosePauseMenu",
                    "type": "Button",
                    "id": "5d010fb2-ac04-4984-8215-94b30ac9045e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebeba1a7-4d01-447f-bb5d-81ec0b3f48cf",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7bbf9e6-6cfe-4d48-b7de-af04712e25b1",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a826cac6-502d-444f-880f-a5f4f5e1ec34",
                    "path": "<Gamepad>/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClosePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}